--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,21 @@
 <html>
 	<head>
 		<title>Speech to text converter in JS</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	
 	<body>
-		<h4 align="center">Speech to text converter in JS</h4>
-		<div id="result"></div>
+		<center>
+			<div class="pulse-ring">
+				<div class="circle"></div>
+			</div>
+		</center>
+		<br>
+		<br>
+		<div id="result"></div>		
+
 		<button onclick="startConverting();"><i class="fa fa-microphone"></i></button>
 		<script src="speech.js" type="text/javascript"></script>
 	</body>
