--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=1, user-scalable=0"/>
-		<title>Speech to text converter in JS</title>
+		<title>Dr.Manhattan</title>
 		<script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
 		0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
 		for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
@@ -15,9 +15,9 @@
 	<body>
 	<ul>
 		<p id="tip">Press space to speak</p>
-		<li><a href="#home">About</a></li>
-		<li><a href="#news">Help</a></li>
-		<li><a href="#contact">Contact</a></li>
+		<li><a onclick="about()">About</a></li>
+		<li><a onclick="help()">Commands</a></li>
+		<li><a onclick="contact()">Contact</a></li>
 	</ul>
 	
 		<center>
@@ -28,8 +28,22 @@
 		</center>
 		<p id="status"></p>
 		<br>
-				
+		<br>
 		<center><div id="result"></div></center>		
 		<script src="speech.js" type="text/javascript"></script>
 	</body>
+	
+	<script>
+		function about(){
+			document.getElementById('result').innerHTML= "<h2>About</h2><br><p>Dr.Manhattan is a custom personal assistant created to serve an everyday person need. The idea came from a challenge to create a personal assistant similar to Cortana or Siri. Theme Inspired from fictional comic book character Dr.Manhattan and his Twelfth-level Intelligence ability </p><br><br><p>Version 0.0.1b</p>";
+		}
+		function help(){
+			document.getElementById('result').innerHTML= "<h2>Commands</h2><br><p>Open 'website'. (example: 'Open Google.')</p><p>Search for...</p><p>Post a Tweet...</p><p>Define... (example: 'Define Computer')</p><p>Whats' the weather</p><p>Show me the news</p><br><p>More coming soon!</p>";
+		}
+		function contact(){
+			document.getElementById('result').innerHTML= "<h2>Contact</h2><br><p>Feel free to contact</p><p>Sergioa.garcia217@gmail.com</p><p><a href='http://twitter.com/elsergio217' target='_blank'>Twitter<a></p><p><a href='http://instagram.com/elsergio217' target='_blank'>Instagram<a></p>"
+		}
+	
+	
+	</script>
 </html>
