Fixed twitter command

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
 			document.getElementById('result').innerHTML= "<h2>About</h2><br><p>Dr.Manhattan is a custom personal assistant created to serve an everyday person need. The idea came from a challenge to create a personal assistant similar to Cortana or Siri. Theme Inspired from fictional comic book character Dr.Manhattan and his Twelfth-level Intelligence ability </p><br><br><p>Version 0.0.1b</p>";
 		}
 		function help(){
-			document.getElementById('result').innerHTML= "<h2>Commands</h2><br><p>Open 'website'. (example: 'Open Google.')</p><p>Search for...</p><p>Post a Tweet...</p><p>Define... (example: 'Define Computer')</p><p>Whats' the weather</p><p>Show me the news</p><br><p>More coming soon!</p>";
+			document.getElementById('result').innerHTML= "<h2>Commands</h2><br><p>Open 'website'. (example: 'Open Google.')</p><p>Search for...</p><p>Post on Twitter...</p><p>Define... (example: 'Define Computer')</p><p>Whats' the weather</p><p>Show me the news</p><br><p>More coming soon!</p>";
 		}
 		function contact(){
 			document.getElementById('result').innerHTML= "<h2>Contact</h2><br><p>Feel free to contact</p><p>Sergioa.garcia217@gmail.com</p><p><a href='http://twitter.com/elsergio217' target='_blank'>Twitter<a></p><p><a href='http://instagram.com/elsergio217' target='_blank'>Instagram<a></p>"
